# SBM-ThreatForge-backend

./: .gitignore  pytest.ini
.hypothesis/tmp/: tmp0_lro0mm  tmp12hwe423  tmp3_1is6ju  tmp4134kwwh  tmp4jgqrwlh  tmp5yavg3ab  tmp6ivceyrv  tmp87awtcm7  tmp8_v0y9k3  tmp94wvpbzt  tmpa5re7n8u  tmpb0eyisqe  tmpcdacydk_  tmpd54425b1  tmpeni_sw55  tmpfxllt4fk  tmpg63o3emz  tmppjif6mvf  tmpr1c8_c4y  tmpsqp8q_h3  tmpsxp996su  tmptye7oyec  tmpurg569fd  tmpwmmqmcb4  tmpwpuanqgn  tmpxc7wlydr  tmpxw6f60ou  tmpyfs7gzjn  tmpywa5rloj  tmpzq9fkpj4
backend/: requirements-local.txt  run_local_backend.py  setup_supabase_storage.py
backend/app/: index.py  (+3 more)
cli/: README.md  pyproject.toml
cli/cc/command/: threat-designer.md
cli/kiro/skill/: SKILL.md
cli/threat_designer_cli/: config.py  formatters.py  main.py  models.py  repl.py  storage.py  styles.py
cli/threat_designer_cli/commands/: attack_tree_cmd.py  configure.py  create.py  delete.py  export.py  list_cmd.py  run_cmd.py  threats_cmd.py
cli/threat_designer_cli/exporters/: json_export.py  markdown.py  pdf.py  word.py
cli/threat_designer_cli/runner/: attack_tree.py  local_state.py  pipeline.py
docs/: architecture.md  authentication.md  aws-decoupling-plan.md  collaboration_system.md  lock_mechanism.md  sentry_design.md  threat_designer_agent.md  version-agent.md
infra/: amplify.tf  api_gateway.tf  authorizer.tf  build.sh  build.tf  cognito.tf  dynamodb.tf  lambda.tf  layers.tf  locals.tf  main.tf  outputs.tf  sentry.tf  spaces.tf  stream_processor.tf  threat_designer_agent_core.tf  variables.tf
mcp-server/: README.md
(+139 files in other folders)
